--- a/back-end/hotmart-challenge-api/pom.xml
+++ b/back-end/hotmart-challenge-api/pom.xml
@@ -104,6 +104,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- Envers -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-envers</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
