--- a/back-end/hotmart-challenge-api/pom.xml
+++ b/back-end/hotmart-challenge-api/pom.xml
@@ -111,6 +111,12 @@
 			<artifactId>spring-data-envers</artifactId>
 		</dependency>
 		
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
